# genealogy_agent

./: README.md  pyproject.toml
docs/: research_policy.md
genealogy_agent/: __init__.py  agent.py  models.py
genealogy_agent/providers/: __init__.py  base.py  claude.py  openai.py
genealogy_agent/tools/: __init__.py  documents.py  gedcom.py  historical_context.py  web.py
tests/: test_agent.py  test_documents.py  test_gedcom.py
